--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,30 +1,48 @@
 pipeline {
-  agent any
-  environment {
-    GOPROXY     = 'https://proxy.golang.org,direct'
-    GOMODCACHE  = "${WORKSPACE}/.gomodcache"   // persist across builds
-    GOCACHE     = "${WORKSPACE}/.gocache"
-    CGO_ENABLED = '0'
-  }
-  stages {
-    stage('Checkout') { steps { checkout scm } }
-    stage('Deps (cache warm)') {
-      steps {
-        sh '''
-          mkdir -p "$GOMODCACHE" "$GOCACHE"
-          go version
-          go mod download
-        '''
-      }
+    agent any
+
+    environment {
+        PORT = "9090"   // Jenkins will use port 9090
     }
-    stage('Build (app only)') {
-      steps {
-        sh 'go build -trimpath -ldflags="-s -w" -o bin/myapp ./cmd/myapp'
-      }
+
+    stages {
+        stage('Checkout') {
+            steps {
+                checkout scm
+            }
+        }
+
+        stage('Setup Go') {
+            steps {
+                sh 'go version'
+            }
+        }
+
+        stage('Build') {
+            steps {
+                sh 'go mod tidy'
+                sh 'go build -o bin/myapp cmd/myapp'
+            }
+        }
+
+        stage('Run App in Background') {
+            steps {
+                sh 'nohup ./bin/myapp > app.log 2>&1 & echo $! > app.pid'
+            }
+        }
+
+        stage('Verify App') {
+            steps {
+                sh 'go run test_client.go'
+            }
+        }
+
     }
-    stage('Unit tests') { steps { sh 'go test ./...' } }
-    stage('Archive binary') {
-      steps { archiveArtifacts artifacts: 'bin/myapp', fingerprint: true }
+
+    post {
+        always {
+            echo 'Stopping app if running...'
+            sh 'if [ -f app.pid ]; then kill $(cat app.pid) || true; fi'
+        }
     }
-  }
 }
